--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,12 +8,23 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
+      <h1>Juhee Hong's Portfolio</h1>
       <p>This is my portfolio.</p>
+      <p>Hi, I'm Juhee, a rising junior studying EECS. </p>
+      <img src="/images/me.jpg">
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <p>Click here to get a random favourite quote of mine:</p>
+      <button onclick="addRandomQuote()">"I choose you, Pikachu!"</button>
+      <div id="quote-container"></div>
     </div>
   </body>
 </html>
+
+<!--
+Add a couple paragraphs explaining your background and what makes you you.
+Add a list of projects you've worked on.
+Add a link to your LinkedIn and GitHub profiles.
+Add images! Create a gallery of your favorite places, or selfies, or pictures of your pets.
+Add a couple paragraphs explaining what you enjoy photographing.
+Add some blog posts explaining one of your hidden talents.
+-->
