--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,21 +2,122 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Juhee Hong Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="content">
-      <h1>Juhee Hong's Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Hi, I'm Juhee, a rising junior studying EECS. </p>
-      <img src="/images/me.jpg">
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
+    <!-- Intro -->
+    <div id="home" class="intro">
+      <h1 class="section__title section__title--intro">Hi, I am <strong>Juhee Hong</strong></h1>      
+      <p class="section__subtitle section__subtitle--intro">Berkeley EECS '24, Researcher, Aspiring SWE </p>
+      <!--<img src="/images/me.jpg" class="intro__img">-->
       <p>Click here to get a random favourite quote of mine:</p>
-      <button onclick="addRandomQuote()">"I choose you, Pikachu!"</button>
+      <button onclick="addRandomQuote()">"You never walk alone."</button>
       <div id="quote-container"></div>
     </div>
+
+    <!-- About Me -->
+    <div class="about-me" id="about">
+        <h1 class="section__title section__title--about">About Me</h1>
+    </div>
+    <div class="about-me__body">
+        <p>
+            Hi, Hello! 
+            I'm currently a rising junior at UC Berkeley studying Electrical Engineering and Computer Science. 
+            I'm working as a research intern at the 
+            <a href="https://aiis.snu.ac.kr/eng/">
+                Artificial Intelligence Institute of Seoul National University (AIIS)
+            </a>
+            advised by Prof. 
+            <a href="https://cse.snu.ac.kr/en/professor/byung-gon-chun">
+                Byung-Gon Chun
+            </a>
+            as well as a research intern at Berkeley's 
+            <a href="https://rise.cs.berkeley.edu/">
+                RISELab
+            </a>
+            supervised by Prof. 
+            <a href="https://people.eecs.berkeley.edu/~adityagp/">
+                Aditya Parameswaran
+            </a>
+            and Nithin Chalapathi. 
+
+            I'm interested in building softwares that bring useful ideas and tools to life.
+            (come back to this later and elaborate :) )
+
+            I used to be involved with the mathematics competitions community. I was a winner in South East Asian Mathematics Competition and a few othe regional competitions, 
+            and trained younger matheletes in middle and high school. I also was a top contributer to Mathematical Stack Exchange. 
+            I like to read, take photos, and travel. 
+
+            If it sounds like we might get along, let me know! :D
+
+        </p>
+    </div>
+
+    <!--Photography-->
+    <!--want to make this an assorted randomized photo tile -->
+
+    <!--Reads-->
+    <h1>A Recent Book I Read That I Recommend:</h1>
+    <ul>
+        <li>Cursed Bunny, by Bora Chung</li>
+    </ul>
+
+    <h1>My All-Time Favourites</h1>
+    <ul>
+        <li>The Red Book, by Carl Jung</li>
+        <li>Cosmos, by Carl Sagan</li>
+        <li>The Little Prince, by Antoine de Saint-Exupéry</li>
+        <li>And Then There Were None, by Agatha Christie </li>
+        <li>Murder on the Orient Express, by Agatha Christie</li>
+        <li>The Socrates Express, by Eric Weiner</li>
+        <li>The Book Thief, by Markus Zusak</li>
+    </ul>
+
+    <!--Work & Play :) (aka projects/portfolio)-->
+    <!-- also want to eventually make this into an assorted "card" stack(?) -->
+    <h1>A Selection from my Projects</h1>
+    <ul>
+        <li>Gitlet</li>
+        <ul>
+            <li>Language: Java</li>
+            <li>Built a version control system that simulates Github with most basic Git functionalities</li>
+        </ul>
+        <li>RookieDB</li>
+        <ul>
+            <li>Language: Java</li>
+            <li>Built a bare-bones database implementation supporting execution of simple SQL queries and transactions in series</li>
+            <li>Supports B+ tree indices, efficient join algorithms, query optimization, multi-granularity locking, and database recovery</li>
+        </ul>
+        <li>Twitter Sentiment Analyzer</li>
+        <ul>
+            <li>Language: Java</li>
+            <li>Built a sentiment analyzer program using the Twitter API and sentiment analysis APIs</li>
+            <li>Program collects a specified number of tweets based on inputs such as date, person, topic, and then analyzes the sentiment of those tweets
+            </li>
+        </ul>
+    </ul>
+
+
+    <!--Footer (Contact and Resume, across all pages)-->
+    <footer class="footer">
+        <a href="mailto:juheehong311@gmail.com" class="footer-link">juheehong311@gmail.com</a>
+        <a href="https://drive.google.com/file/d/1NsjBv2Ix1BbOGcipIlsYCV6k91rMCOF_/view?usp=sharing">Resume</a>
+        <ul class="social-list">
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://www.linkedin.com/in/jessie-hong-630730165/">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://github.com">
+                    <i class="fab fa-github"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
+
   </body>
 </html>
 
@@ -27,4 +128,11 @@ Add a link to your LinkedIn and GitHub profiles.
 Add images! Create a gallery of your favorite places, or selfies, or pictures of your pets.
 Add a couple paragraphs explaining what you enjoy photographing.
 Add some blog posts explaining one of your hidden talents.
+
+Remember:
+cd \
+    ~/software-product-sprint/portfolio
+mvn package appengine:deploy
+
+https://jhong-sps-summer22.appspot.com/
 -->
