make a fetch button with static input from /hello

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,8 +18,11 @@
       <img src="images/me.jpg" class="intro__img">
       <button onclick="addRandomQuote()" class="intro__btn">Click here to get a random favourite quote of mine:</button>
       <div id="quote-container" class="intro__quote"></div>
+      <button onclick="fetchPokemon();" class="intro__btn">
+          Click here to get a random Pokemon I like:
+      </button>
+      <div id="pokemon-container" class="intro__quote"></div>
     </section>
-
     <!-- About Me -->
     <section class="about-me" id="about">
         <h1 class="section__title section__title--about">About Me</h1>
