made a post request text box in the reads section. cannot see contents of text in logs explorer; not sure if it is due to technical errors or my unfamiliarity with logs explorer. asked on group chat and tech chat and haven't yet gotten a response.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -123,6 +123,14 @@
                 <li>The Socrates Express, by Eric Weiner</li>
                 <li>The Book Thief, by Markus Zusak</li>
             </ul>
+
+            <form method="POST" action="/form-handler" onclick="bookrec()">
+                <p>I'm always hungry for more reads—Recommend me a book! :D</p>
+                <textarea name="text-input">Title Author</textarea>
+                <br/>
+                <input type="submit" />
+                <p id='thanks'></p>
+            </form>
         </div>
     </section>
 
