translate modified files based on chatroom feedback

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,7 +27,7 @@
     <section class="about-me" id="about">
         <h1 class="section__title section__title--about">About Me</h1>
         <select class="intro__btn" id="language">
-            <option value="es">English</option>
+            <option value="en">English</option>
             <option value="ko">Korean</option>
             <option value="zh">Chinese</option>
         </select>
