hide the original about blurb when translated and also added show original button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -32,7 +32,12 @@
             <option value="zh">Chinese</option>
         </select>
         <button onclick="translateAbout()">Click here to translate! (Fun fact: these are languages I can speak!)</button>
-        <div id="translate-container" class="about-me__body"></div>
+        <button onclick="showOriginalAbout()" class="intro__btn">See Original</button>
+        <div id="translated" class="about-me__body">
+            <p id="translate-container">
+
+            </p>
+        </div>
         <div class="about-me__body">
             <p id="about-me-par">
                 Hi, Hello!  <br> <br>
