book recommendation 'you recommended' now showing after entering things in textbox, but once 'submit' btn clicked, the whole page still reloads.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -137,7 +137,7 @@
                 <li>The Book Thief, by Markus Zusak</li>
             </ul>
 
-            <form method="POST" action="/form-handler" onclick="bookRecommendation()">
+            <form method="POST" onclick="bookRecommendation()">
                 <!-- action="/form-handler" as a form attribute? -->
                 <p>I'm always hungry for more reads—Recommend me a book! :D</p>
                 <textarea name="text-input" id="input_book_rec">Title Author</textarea>
