changed the form servlet name and url to be more descriptive (book recommendation)

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -138,7 +138,7 @@
             </ul>
 
             <form method="POST" onclick="bookRecommendation()" onsubmit="return false">
-                <!-- action="/form-handler" as a form attribute? -->
+                <!-- action="/book-recommender" as a form attribute? -->
                 <p>I'm always hungry for more reads—Recommend me a book! :D</p>
                 <textarea name="text-input" id="input_book_rec">Title Author</textarea>
                 <br/>
