saving datastore and cloud storage library walkthroughs for convenience

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -257,4 +257,17 @@ cd \
 mvn package appengine:deploy
 
 https://jhong-sps-summer22.appspot.com/
+
+
+week 3 libraries walkthrough
+teachme \
+    ~/software-product-sprint/walkthroughs/week-3-libraries/libraries-walkthrough.md
+
+datastore library walkthrough
+teachme \
+    ~/software-product-sprint/walkthroughs/week-3-libraries/datastore/datastore-walkthrough.md
+
+cloud storage library walkthrough
+teachme \
+    ~/software-product-sprint/walkthroughs/week-3-libraries/cloud-storage/cloud-storage-walkthrough.md
 -->
